Formata o código utilizando google-java-format